2006-03-03  Radek Doulik  <rodo@novell.com>

	* src/main.c (main): init and close session when sm is not
	disabled. Enable sm by default.

	* src/session.c: added minimal session support so that compiz at
	least register with session manager to avoid registering timeouts

2006-03-03  David Reveman  <davidr@novell.com>

	* src/screen.c (removeScreenGrab): Use correct cursor when changing
	actvie pointer grab.

2006-03-02  David Reveman  <davidr@novell.com>

	* plugins/rotate.c (rotateHandleEvent):
	* plugins/zoom.c (zoomHandleEvent): Make sure no pending motion
	notify events exists when warping the pointer.

	* plugins/rotate.c (rotateHandleEvent): Reset movement.

	* plugins/switcher.c: Always send activate request when selecting a
	window.

	* plugins/cube.c (cubePaintTransformedScreen): Reset color.

	* plugins/switcher.c (switchPaintThumb): PAINT_WINDOW_TRANSLUCENT_MASK
	if opacity isn't opaque.
	(switchPaintWindow): Reset color.

2006-03-01  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.5.

	* plugins/fade.c (fadeAddDisplayModal): Higher brightness when showing
	display modal dialogs.

	* plugins/switcher.c (switchPreparePaintScreen): Continue adjusting
	window selection even though we're not grabbing the screen.
	(switchPaintWindow): Use last used paint attributes for thumbnails.
	(switchPaintWindow): Use blending when drawing selection rectangle.

	* plugins/fade.c (fadeHandleEvent): unmap. -> map.
	(fadeDamageWindowRect): Only zero opacity if we're not already
	fading the window.

	* src/window.c (unmapWindow): 'placed' variable should be reset on
	first call to unmapWindow.

	* src/screen.c:
	* src/event.c (handleEvent):
	* src/display.c (eventLoop):
	* include/compiz.h: Add slow animation option.

	* src/window.c (recalcNormalHints): Constrain window dimensions to
	max texture size.

	* src/screen.c (addScreen): Get max texture size.

	* gnome/window-decorator/gnome-window-decorator.c: Nicer drop shadow